--- a/uk.html
+++ b/uk.html
@@ -9,6 +9,19 @@
 			background: azure;
 		}
 		svg { height: 65%; }
+
+		.background {
+			fill: none;
+			pointer-events: all;
+		}
+
+		.subunit {
+			cursor: pointer;
+		}
+
+		.subunit.active {
+			fill: #A6CF9C;
+		}
 	</style>
 </head>
 <body>
@@ -20,40 +33,127 @@
 	<script src="http://d3js.org/topojson.v1.min.js"></script>
 	<script>
 		
+	// Set Aspect Ratio in pixels
 	var width = 960,
-			height = 1160;
+			height = 1160
+			active = d3.select(null);
 
+	// The Map projection settings
 	var projection = d3.geo.albers()
-				.center([0, 55.4])
-				.rotate([4.4, 0])
-				.parallels([50, 60])
-				.scale(6000)
-				.translate([width / 2, height /2]);
+		.center([0, 55.4])
+		.rotate([4.4, 0])
+		.parallels([50, 60])
+		.scale(6000)
+		.translate([width / 2, height / 2]);
 
+	// Apply the projection to the path
 	var path = d3.geo.path()
-				.projection(projection);
+		.projection(projection);
 
+	// Set the zoom behavior defaults
 	var zoom = d3.behavior.zoom()
+		.scale(1)
 		.translate([0,0])
-    .scale(1)
-    .scaleExtent([1, 8])
-    .translate([width / 2, height / 2])
+    .scaleExtent([1, 3])
     .on("zoom", zoomed);
 
+	// Add the svg to the .container element, stop event propogation
 	var svg = d3.select(".container").append("svg")
-							.attr("viewBox", "0 0 " + width + " " + height )
-							.attr("preserveAspectRatio", "xMidYMid meet");
-	
+		.attr("viewBox", "0 0 " + width + " " + height )
+		.attr("preserveAspectRatio", "xMidYMid meet")
+		.on("click", stopped, true);
+
+	// Apply the zoom settings to the root as gestures and events
 	svg.call(zoom)
 		.call(zoom.event)
 
+	// A rectangle to reset the view, drawn behind the map
+	svg.append("rect")
+		.attr("class", "background")
+		.attr("width", width)
+		.attr("height", height)
+		.on("click", reset);
+		
+	// Group the map features
+	var features = svg.append("g");
+	
+	// Load the actual map data
+	d3.json("data/uk_simplified/uk.json", function(error, uk) {
+		if (error) return console.error(error);
+		
+		// The individual states/countries
+		var subunits = topojson.feature(uk, uk.objects.uk_subunits).features;
+		// The entire map, used for the nice border
+		var unit = topojson.feature(uk, uk.objects.uk_subunits);
+
+		console.log(uk);
+		console.log(subunits);
+		console.log(unit);
+		
+		var i = Math.floor(Math.random() * 10) + 1;
+
+		features.append("path")
+			.datum(unit)
+				.attr("d", path)
+				.attr("stroke", "#ccc")
+				.attr("fill", "#555")
+				.attr("stroke-width", 10)
+				.attr("stroke-linejoin", "round");
+
+		features.selectAll(".subunit")
+				.data(subunits)
+			.enter().append("path")
+				.attr("d", path)
+				.attr("class", function(d) { 
+						var name = d.properties.name.replace(/\.+\ +/,"")
+						console.log(name); 
+						return "subunit " + name; })
+				.attr("fill", "#f6f4f2")
+				//.attr("fill", function() { i++; return chooseColor(i); })
+				.attr("stroke", "#333")
+				//.attr("stroke", "#fff")
+				.attr("stroke-width", 1)
+				.attr("stroke-linejoin", "round")
+				.on("click", clicked);
+	});
+
 	function zoomed() {
-		console.log("Zoom zoom");
-		svg.attr("transform", "translate(" + d3.event.translate + ")scale(" + d3.event.scale + ")");
+		console.log("Zoom zoom: " + d3.event.translate + " " + d3.event.scale);
+		svg.selectAll("path")
+			.attr("transform", "translate(" + d3.event.translate + ") scale(" + d3.event.scale + ")");
 	}
 
-	function clicked() {
+	function clicked(d) {
 		console.log("Clicked " + d);
+
+		if (active.node() === this) return reset();
+		active.classed("active", false);
+		active = d3.select(this).classed("active", true);
+
+		var bounds = path.bounds(d),
+				dx = bounds[1][0] - bounds[0][0],
+				dy = bounds[1][1] - bounds[0][1],
+				x = (bounds[0][0] + bounds[1][0]) / 2,
+				y = (bounds[0][1] + bounds[1][1]) / 2,
+				scale = 0.9 / Math.max(dx / width, dy / height),
+				translate = [width / 2 - scale * x, height / 2 - scale * y];
+
+		svg.transition()
+			.duration(1000)
+			.call(zoom.translate(translate).scale(scale).event);
+	}
+
+	function reset() {
+		active.classed("active", false);
+		active = d3.select(null);
+
+		svg.transition()
+				.duration(750)
+				.call(zoom.translate([0, 0]).scale(1).event);
+	}
+	
+	function stopped() {
+		if (d3.event.defaultPrevented) d3.event.stopPropagation();
 	}
 	
 	function chooseColor(ith, colors) {
@@ -62,38 +162,6 @@
 		console.log(i, ith, colors[i]);
 		return colors[i];
 	}
-
-
-	d3.json("data/uk_simplified/uk.json", function(error, uk) {
-		if (error) return console.error(error);
-		console.log(uk);
-
-		var subunits = topojson.feature(uk, uk.objects.uk_subunits).features;
-		console.log(subunits);
-		
-		var i = Math.floor(Math.random() * 10) + 1;
-
-		svg.append("path")
-			.datum(topojson.feature(uk, uk.objects.uk_subunits))
-			.attr("stroke", "#ccc")
-			.attr("fill", "#555")
-			.attr("stroke-width", 10)
-			.attr("stroke-linejoin", "round")
-			.attr("d", path);
-
-		svg.selectAll(".subunit")
-				.data(subunits)
-			.enter().append("path")
-				.attr("class", function(d) { return "subunit " + d.id; })
-				.attr("fill", "#f6f4f2")
-				//.attr("fill", function() { i++; return chooseColor(i); })
-				.attr("stroke", "#333")
-				//.attr("stroke", "#fff")
-				.attr("stroke-width", 1)
-				.attr("stroke-linejoin", "round")
-				.attr("d", path)
-				.on("click", clicked);
-	});
 	</script>
 </body>
 </html>
