--- a/usa2.html
+++ b/usa2.html
@@ -27,6 +27,6 @@
     FastClick.attach(document.body);
 	}, false);
 	</script>
-	<script src="scripts/usa.js"></script>
+	<script src="scripts/usa_2.js"></script>
 </body>
 </html>
